@@ -4,6 +4,7 @@
 <title>Smart Pointers</title>
 <link rel="stylesheet" href="theme/style.css" type="text/css">
 <link rel="prev" href="exporting_all_declarations_from_a_header.html">
+<link rel="next" href="global_variables.html">
 </head>
 <body>
 <table width="100%" height="48" border="0" cellspacing="2">
@@ -20,7 +21,7 @@
   <tr>
     <td width="30"><a href="../index.html"><img src="theme/u_arr.gif" border="0"></a></td>
     <td width="30"><a href="exporting_all_declarations_from_a_header.html"><img src="theme/l_arr.gif" border="0"></a></td>
-    <td width="20"><img src="theme/r_arr_disabled.gif" border="0"></td>
+    <td width="20"><a href="global_variables.html"><img src="theme/r_arr.gif" border="0"></a></td>
    </tr>
 </table>
 <p>
@@ -61,7 +62,7 @@ exported if needed, without the need to tell Pyste about them explicitly.</p>
   <tr>
     <td width="30"><a href="../index.html"><img src="theme/u_arr.gif" border="0"></a></td>
     <td width="30"><a href="exporting_all_declarations_from_a_header.html"><img src="theme/l_arr.gif" border="0"></a></td>
-    <td width="20"><img src="theme/r_arr_disabled.gif" border="0"></td>
+    <td width="20"><a href="global_variables.html"><img src="theme/r_arr.gif" border="0"></a></td>
    </tr>
 </table>
 <br>
