@@ -65,6 +65,11 @@
         <a href="doc/smart_pointers.html">Smart Pointers</a>
     </td>
   </tr>
+  <tr>
+    <td class="toc_cells_L1">
+        <a href="doc/global_variables.html">Global Variables</a>
+    </td>
+  </tr>
 </table>
 <br>
 <hr size="1"><p class="copyright">Copyright &copy; 2003 Bruno da Silva de Oliveira<br>Copyright &copy; 2002-2003 Joel de Guzman<br><br>
