@@ -243,8 +243,8 @@ class Method(Function):
             self.name, 
             self.class_, 
             self.result, 
-            self.params[:], 
-            self.visib, 
+            self.parameters[:], 
+            self.visibility, 
             self.virtual, 
             self.abstract, 
             self.static, 
